--- a/pipelines/etcd.yml
+++ b/pipelines/etcd.yml
@@ -326,21 +326,23 @@ jobs:
   - aggregate:
     - get: ci
       resource: infrastructure-ci
-    - get: bbl-states-repo
+    - get: bbl-state
       resource: infrastructure-ci-bbl-states
       passed:
       - setup-eats-infrastructure
     - get: deployment-lock
       passed:
       - setup-eats-infrastructure
+    - get: cf-deployment-concourse-tasks
   - task: delete-deployments
-    file: ci/scripts/common/delete-deployments/task.yml
+    file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
     params:
       BBL_STATE_DIR: eats
-    on_failure:
-      put: slack-alert
-      params:
-        text: {{slack_failure_text}}
+  - task: cleanup-cf-deployment
+    file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
+    params:
+      BBL_STATE_DIR: eats
+      CLEAN_ALL: true
 
 - name: teardown-eats-infrastructure-early
   public: true
