--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -8,30 +8,26 @@ groups:
   - gcp-concourse-acceptance-tests
   - bbl-downstream-docker-image
   - bbl-downstream-setup-env
+  - bbl-downstream-cf-deploy
+  - bbl-downstream-cf-delete
   - bbl-downstream-destroy-env
   - setup-aws-cf-infrastructure
   - aws-cf-deploy
   - aws-cf-delete
   - teardown-aws-cf-infrastructure
-  - setup-gcp-cf-infrastructure
-  - gcp-cf-deploy
-  - gcp-cf-delete
-  - teardown-gcp-cf-infrastructure
   - merge-develop-to-master
 
 - name: cf-deployment
   jobs:
   - bbl-downstream-docker-image
   - bbl-downstream-setup-env
+  - bbl-downstream-cf-deploy
+  - bbl-downstream-cf-delete
   - bbl-downstream-destroy-env
   - setup-aws-cf-infrastructure
   - aws-cf-deploy
   - aws-cf-delete
   - teardown-aws-cf-infrastructure
-  - setup-gcp-cf-infrastructure
-  - gcp-cf-deploy
-  - gcp-cf-delete
-  - teardown-gcp-cf-infrastructure
 
 - name: smoke-tests
   jobs:
@@ -543,141 +539,12 @@ jobs:
         repository: updated-bbl-state
         rebase: true
 
-- name: setup-gcp-cf-infrastructure
-  serial_groups: [gcp-cf]
-  public: false
-  serial: true
-  plan:
-  - aggregate:
-    - get: bosh-bootloader
-      resource: bosh-bootloader-develop
-    - get: ci
-      resource: infrastructure-ci
-    - get: bbl-state
-      resource: infrastructure-ci-bbl-states
-    - get: cf-deployment-concourse-tasks
-    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
-      passed: [bbl-downstream-docker-image]
-  - task: bbl-up
-    file: cf-deployment-concourse-tasks/bbl-up/task.yml
-    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-    params:
-      BBL_IAAS: gcp
-      BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
-      BBL_GCP_PROJECT_ID: {{gcp_project_id}}
-      BBL_GCP_REGION: {{gcp_region}}
-      BBL_GCP_ZONE: {{gcp_zone}}
-      BBL_STATE_DIR: bbl-gcp-cf
-      BBL_ENV_NAME: bbl-gcp-cf
-      LB_DOMAIN: bbl-gcp-cf.infrastructure.cf-app.com
-      BBL_LB_CERT: {{bbl_gcp_cf_lb_cert}}
-      BBL_LB_KEY: {{bbl_gcp_cf_lb_key}}
-      GIT_COMMIT_EMAIL: cf-infrastructure@pivotal.io
-      GIT_COMMIT_USERNAME: CI Infra Bot
-    ensure:
-      put: infrastructure-ci-bbl-states
-      params:
-        repository: updated-bbl-state
-        rebase: true
-
-- name: gcp-cf-deploy
-  serial_groups: [gcp-cf]
-  public: false
-  serial: true
-  plan:
-  - aggregate:
-    - get: bosh-bootloader
-      resource: bosh-bootloader-develop
-      passed: [setup-gcp-cf-infrastructure]
-    - get: ci
-      resource: infrastructure-ci
-    - get: bbl-state
-      resource: infrastructure-ci-bbl-states
-      passed: [setup-gcp-cf-infrastructure]
-      trigger: true
-    - get: cf-deployment-concourse-tasks
-    - get: cf-deployment
-    - get: ops-files
-      resource: cf-deployment
-    - get: vars-files
-      resource: infrastructure-ci-bbl-states
-    - get: vars-store
-      resource: infrastructure-ci-bbl-states
-  - task: upload-stemcell
-    file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
-    params:
-      BBL_STATE_DIR: bbl-gcp-cf
-      INFRASTRUCTURE: google
-  - task: deploy
-    file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
-    params:
-      BBL_STATE_DIR: bbl-gcp-cf
-      SYSTEM_DOMAIN: bbl-gcp-cf.infrastructure.cf-app.com
-      VARS_STORE_FILE: bbl-gcp-cf/deployment-vars.yml
-    ensure:
-      put: infrastructure-ci-bbl-states
-      params:
-        repository: updated-vars-store
-        rebase: true
-
-- name: gcp-cf-delete
-  serial_groups: [gcp-cf]
-  public: false
-  plan:
-  - aggregate:
-    - get: bosh-bootloader
-      resource: bosh-bootloader-develop
-      passed: [gcp-cf-deploy]
-    - get: cf-deployment-concourse-tasks
-    - get: bbl-state
-      resource: infrastructure-ci-bbl-states
-      passed: [gcp-cf-deploy]
-      trigger: true
-  - task: delete-cf-deployment
-    file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
-    params:
-      BBL_STATE_DIR: bbl-gcp-cf
-  - task: cleanup-cf-deployment
-    file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
-    params:
-      BBL_STATE_DIR: bbl-gcp-cf
-      CLEAN_ALL: true
-
-- name: teardown-gcp-cf-infrastructure
-  serial_groups: [gcp-cf]
-  public: false
-  plan:
-  - aggregate:
-    - get: bosh-bootloader
-      resource: bosh-bootloader-develop
-      passed: [gcp-cf-delete]
-    - get: ci
-      resource: infrastructure-ci
-    - get: cf-deployment-concourse-tasks
-    - get: bbl-state
-      resource: infrastructure-ci-bbl-states
-      passed: [gcp-cf-delete]
-      trigger: true
-    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
-  - task: bbl-destroy
-    file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-    params:
-      BBL_STATE_DIR: bbl-gcp-cf
-      GIT_COMMIT_EMAIL: cf-infrastructure@pivotal.io
-      GIT_COMMIT_USERNAME: CI Infra Bot
-    ensure:
-      put: infrastructure-ci-bbl-states
-      params:
-        repository: updated-bbl-state
-        rebase: true
-
 - name: merge-develop-to-master
   public: true
   plan:
   - get: develop
     resource: bosh-bootloader-develop
-    passed: [teardown-aws-cf-infrastructure, teardown-gcp-cf-infrastructure]
+    passed: [teardown-aws-cf-infrastructure, bbl-downstream-destroy-env]
     trigger: true
   - put: bosh-bootloader-master
     params:
@@ -724,8 +591,8 @@ jobs:
       BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: google_account_creds.json
       BBL_GCP_PROJECT_ID: {{gcp_project_id}}
-      BBL_GCP_REGION: us-east1
-      BBL_GCP_ZONE: us-east1-b
+      BBL_GCP_REGION: {{gcp_region}}
+      BBL_GCP_ZONE: {{gcp_zone}}
       BBL_LB_CERT: {{bbl_downstream_cf_ssl_cert}}
       BBL_LB_KEY: {{bbl_downstream_cf_ssl_cert_private_key}}
       LB_DOMAIN: bbl-downstream.bbl-test.ci.cf-app.com
@@ -745,6 +612,75 @@ jobs:
       params:
         text: {{slack_failure_text}}
 
+- name: bbl-downstream-cf-deploy
+  serial_groups: [downstream]
+  serial: true
+  plan:
+  - aggregate:
+    - get: bosh-bootloader
+      resource: bosh-bootloader-develop
+      passed: [bbl-downstream-setup-env]
+    - get: ci
+      resource: infrastructure-ci
+    - get: bbl-state
+      resource: infrastructure-ci-bbl-states
+      passed: [bbl-downstream-setup-env]
+      trigger: true
+    - get: cf-deployment-concourse-tasks
+    - get: cf-deployment
+    - get: ops-files
+      resource: cf-deployment
+    - get: vars-files
+      resource: infrastructure-ci-bbl-states
+    - get: vars-store
+      resource: infrastructure-ci-bbl-states
+    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
+      passed: [bbl-downstream-setup-env]
+  - task: upload-stemcell
+    file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
+    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+    params:
+      BBL_STATE_DIR: bbl-downstream-env
+      INFRASTRUCTURE: google
+  - task: deploy
+    file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
+    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+    params:
+      BBL_STATE_DIR: bbl-downstream-env
+      SYSTEM_DOMAIN: bbl-downstream.bbl-test.ci.cf-app.com
+      VARS_STORE_FILE: bbl-downstream-env/deployment-vars.yml
+    ensure:
+      put: infrastructure-ci-bbl-states
+      params:
+        repository: updated-vars-store
+        rebase: true
+
+- name: bbl-downstream-cf-delete
+  serial_groups: [downstream]
+  plan:
+  - aggregate:
+    - get: bosh-bootloader
+      resource: bosh-bootloader-develop
+      passed: [bbl-downstream-cf-deploy]
+    - get: cf-deployment-concourse-tasks
+    - get: bbl-state
+      resource: infrastructure-ci-bbl-states
+      passed: [bbl-downstream-cf-deploy]
+      trigger: true
+    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
+      passed: [bbl-downstream-cf-deploy]
+  - task: delete-cf-deployment
+    file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
+    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+    params:
+      BBL_STATE_DIR: bbl-downstream-env
+  - task: cleanup-cf-deployment
+    file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
+    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+    params:
+      BBL_STATE_DIR: bbl-downstream-env
+      CLEAN_ALL: true
+
 - name: bbl-downstream-destroy-env
   serial_groups: [downstream]
   public: true
@@ -753,13 +689,13 @@ jobs:
   - aggregate:
     - get: bosh-bootloader
       resource: bosh-bootloader-develop
-      passed: [bbl-downstream-setup-env]
+      passed: [bbl-downstream-cf-delete]
       trigger: true
     - get: cf-deployment-concourse-tasks
     - get: infrastructure-ci-bbl-states
-      passed: [bbl-downstream-setup-env]
+      passed: [bbl-downstream-cf-delete]
     - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
-      passed: [bbl-downstream-setup-env]
+      passed: [bbl-downstream-cf-delete]
   - task: destroy-infrastructure
     file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
     image: cf-deployment-concourse-tasks-bbl-dev-docker-image
