--- a/pipelines/etcd.yml
+++ b/pipelines/etcd.yml
@@ -100,8 +100,16 @@ resources:
 - name: cf-deployment-concourse-tasks
   type: git
   source:
-    uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks.git
     branch: master
+    uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks.git
+
+- name: cf-deployment-concourse-tasks-bbl-dev-docker-image
+  type: docker-image
+  source:
+    repository: cfinfrastructure/cf-deployment-concourse-tasks-bbl-dev
+    username: {{docker-username}}
+    password: {{docker-password}}
+    email: {{docker-email}}
 
 - name: infrastructure-ci-bbl-states
   type: git
@@ -289,22 +297,31 @@ jobs:
       trigger: true
     - get: ci
       resource: infrastructure-ci
-    - get: bbl-states-repo
+    - get: bbl-state
       resource: infrastructure-ci-bbl-states
+    - get: cf-deployment-concourse-tasks
+    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
   - put: deployment-lock
     timeout: 3h
     params:
       claim: etcd-eats
   - do:
     - task: bbl-up
-      file: ci/scripts/common/bbl-up/task.yml
+      file: cf-deployment-concourse-tasks/bbl-up/task.yml
+      image: cf-deployment-concourse-tasks-bbl-dev-docker-image
       params:
+        BBL_IAAS: gcp
+        BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
         BBL_GCP_PROJECT_ID: {{gcp_project_id}}
         BBL_GCP_REGION: {{gcp_region}}
-        BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
         BBL_GCP_ZONE: {{gcp_zone}}
-        BBL_NAME: eats
         BBL_STATE_DIR: eats
+        BBL_ENV_NAME: eats
+        LB_DOMAIN: eats.infrastructure.cf-app.com
+        BBL_LB_CERT: {{etcd_cf_deployment_lb_cert}}
+        BBL_LB_KEY: {{etcd_cf_deployment_lb_key}}
+        GIT_COMMIT_EMAIL: cf-infrastructure@pivotal.io
+        GIT_COMMIT_USERNAME: CI Infra Bot
       on_failure:
         put: slack-alert
         params:
@@ -313,7 +330,7 @@ jobs:
         put: infrastructure-ci-bbl-states
         params:
           rebase: true
-          repository: bbl-states-repo-out
+          repository: updated-bbl-state
     on_failure:
       put: deployment-lock
       params:
