--- a/pipelines/etcd.yml
+++ b/pipelines/etcd.yml
@@ -868,28 +868,34 @@ jobs:
       trigger: true
     - get: ci
       resource: infrastructure-ci
-    - get: bbl-states-repo
+    - get: bbl-state
       resource: infrastructure-ci-bbl-states
+    - get: cf-deployment-concourse-tasks
+    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
   - put: deployment-lock
     timeout: 3h
     params:
       claim: etcd-cf-tls-upgrade
   - task: bbl-up
-    file: ci/scripts/common/bbl-up/task.yml
+    file: cf-deployment-concourse-tasks/bbl-up/task.yml
+    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
     params:
+      BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
       BBL_GCP_PROJECT_ID: {{gcp_project_id}}
       BBL_GCP_REGION: {{gcp_region}}
       BBL_GCP_ZONE: {{gcp_zone}}
       BBL_STATE_DIR: etcd-cf-tls-upgrade
-      BBL_NAME: etcd-cf-tls-upgrade
-      BBL_LB_DOMAIN: etcd-cf-tls-upgrade.infrastructure.cf-app.com
+      BBL_ENV_NAME: etcd-cf-tls-upgrade
+      LB_DOMAIN: etcd-cf-tls-upgrade.infrastructure.cf-app.com
       BBL_LB_CERT: {{etcd_cf_tls_upgrade_lb_cert}}
       BBL_LB_KEY: {{etcd_cf_tls_upgrade_lb_key}}
+      GIT_COMMIT_EMAIL: cf-infrastructure@pivotal.io
+      GIT_COMMIT_USERNAME: CI Infra Bot
     ensure:
       put: infrastructure-ci-bbl-states
       params:
-        repository: bbl-states-repo-out
+        repository: updated-bbl-state
         rebase: true
     on_failure:
       do:
