--- a/scripts/common/delete-deployments/task.yml
+++ b/scripts/common/delete-deployments/task.yml
@@ -8,7 +8,7 @@ image_resource:
 
 inputs:
   - name: ci
-  - name: bbl-states-repo
+  - name: bbl-state
 
 run:
   path: ci/scripts/common/delete-deployments/task
