--- a/pipelines/infrastructure-ci.yml
+++ b/pipelines/infrastructure-ci.yml
@@ -72,6 +72,9 @@ jobs:
       trigger: true
     - task: infrastructure-ci-tests
       file: ci/scripts/infrastructure-ci/run-tests/task.yml
+      params:
+        AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
+        AWS_SECRET_ACCESS_KEY: {{aws_secret_key_id}}
       on_failure:
         put: slack-alert
         params:
