--- a/scripts/infrastructure-ci/run-tests/task.yml
+++ b/scripts/infrastructure-ci/run-tests/task.yml
@@ -9,5 +9,9 @@ image_resource:
 inputs:
 - name: ci
 
+params:
+  AWS_ACCESS_KEY_ID:
+  AWS_SECRET_ACCESS_KEY:
+
 run:
   path: ci/scripts/infrastructure-ci/run-tests/task
