Correct variable name for AWS keys
Signed-off-by: Zach Gershman <zgershman@pivotal.io>

--- a/pipelines/infrastructure-ci.yml
+++ b/pipelines/infrastructure-ci.yml
@@ -74,7 +74,7 @@ jobs:
       file: ci/scripts/infrastructure-ci/run-tests/task.yml
       params:
         AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-        AWS_SECRET_ACCESS_KEY: {{aws_secret_key_id}}
+        AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
       on_failure:
         put: slack-alert
         params:
