--- a/scripts/bosh-bootloader/get-aws-nat-amis/task.yml
+++ b/scripts/bosh-bootloader/get-aws-nat-amis/task.yml
@@ -15,6 +15,8 @@ outputs:
 params:
   AWS_ACCESS_KEY_ID:
   AWS_SECRET_ACCESS_KEY:
+  GOVCLOUD_AWS_ACCESS_KEY_ID:
+  GOVCLOUD_AWS_SECRET_ACCESS_KEY:
 
 run:
   path: ci/scripts/bosh-bootloader/get-aws-nat-amis/task
