Trigger gcp concourse acceptance tests with stemcell bump.
Signed-off-by: Zach Gershman <zgershman@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -267,6 +267,7 @@ jobs:
     - get: concourse-deployment
     - get: stemcell
       resource: gcp-stemcell
+      trigger: true
     - get: ci
       resource: infrastructure-ci
     - get: bosh-bootloader
